--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -52,3 +52,34 @@ services:
         FLINK_PROPERTIES=
         jobmanager.rpc.address: jobmanager
         taskmanager.numberOfTaskSlots: 2
+
+  namenode:
+    image: apache/hadoop:3.3.5
+    hostname: namenode
+    command: [ "hdfs", "namenode" ]
+    ports:
+      - 9870:9870
+    env_file:
+      - ./config
+    environment:
+      ENSURE_NAMENODE_DIR: "/tmp/hadoop-root/dfs/name"
+  datanode:
+    image: apache/hadoop:3.3.5
+    command: [ "hdfs", "datanode" ]
+    env_file:
+      - ./config
+  resourcemanager:
+    image: apache/hadoop:3.3.5
+    hostname: resourcemanager
+    command: [ "yarn", "resourcemanager" ]
+    ports:
+      - 8088:8088
+    env_file:
+      - ./config
+    volumes:
+      - ./test.sh:/opt/test.sh
+  nodemanager:
+    image: apache/hadoop:3.3.5
+    command: [ "yarn", "nodemanager" ]
+    env_file:
+      - ./config
