--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,16 @@
       <artifactId>flink-json</artifactId>
       <version>1.18.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.flink</groupId>
+      <artifactId>flink-hadoop-compatibility_2.12</artifactId>
+      <version>1.18.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.hadoop</groupId>
+      <artifactId>hadoop-client</artifactId>
+      <version>3.3.5</version>
+    </dependency>
 
   </dependencies>
   <build>
